Added Service Discovery for P2P Bidirectional replication